k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: webshop-app
  labels:
    app: mongodb
spec:
  type: NodePort
  ports:
    - port: 5432  
      nodePort: 30001  
  selector:
    app: mongodb
